fix(594): improve long stays handling in processing pipeline
- Replace `get(0)` with `getFirst()` for better clarity and handling of query results.
- Rename `findClusteredPointsInTimeRangeForUser2` to `findVisitsInTimerangeForUser` for more accurate method naming.
- Add `@SuppressWarnings("DataFlowIssue")` to prevent inspection issues.
- Sort visits by start time before returning the detection results.
- Adjust comments for better readability in `UnifiedLocationProcessingService`.